<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@android:color/white"
    android:layout_marginBottom="2dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvItemBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tablet_brand"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tvItemCable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cable_type" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvItemContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/tvItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <Button
        android:id="@+id/btnMarkReturned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_returned"
        android:layout_marginTop="4dp"/>

</LinearLayout>
