<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AdminActivity"
    android:fitsSystemWindows="true">

    <!-- Filtreringspanel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_by_brand"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <Spinner
                android:id="@+id/spinnerFilterBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/filter_brand" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_by_cable"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <Spinner
                android:id="@+id/spinnerFilterCable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/filter_cable" />
        </LinearLayout>

        <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_start"
        />

    <!-- Liste over udlån -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLoans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"/>

</LinearLayout>
