<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ConfirmationActivity"
    android:fitsSystemWindows="true"
    android:layout_marginHorizontal="8dp">

    <TextView
        android:id="@+id/tvConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <!-- Her udskrives opsummering i en TextView -->
    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loan_summary"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_start"
        />

</LinearLayout>
